# EKIP---Enterprise-Knowledge-Incident-Intelligence-Platform

./: alembic.ini  pyproject.toml
app/shared/config/: logging.py  settings.py
app/shared/config/Database/: session.py
app/shared/config/Database/migrations/: base.py
app/shared/config/Database/models/: core_models.py
docs/: AGENT_WORKFLOWS.md  API_DESIGN.md  Architecture.md  DATABASE_DESIGN.md  ENGINEERING_DECISIONS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md
