[project]
name = "ekip"
version = "0.1.0" #since its in development stage
description = "Enterprise Knowledge & Incident Intelligence Platform"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Core API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",

    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",

    # Queue / background jobs (ENGINEERING_DECISIONS.md #002)
    "redis>=5.0",
    "arq>=0.26",

    # AI / RAG / agents
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.11",

    # MCP
    "mcp>=1.0",

    # Observability
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.20",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",           # test client for FastAPI
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.1",    # enforces the module boundary rules from ARCHITECTURE.md §3
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Module boundary enforcement — encodes ARCHITECTURE.md §3's "can call /
# cannot call" rules as an automated check (`lint-imports` in CI), instead of
# relying on code review alone to catch a stray cross-module import.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "database is a leaf module"
type = "forbidden"
source_modules = ["app.database"]
forbidden_modules = ["app.core", "app.agents", "app.mcp", "app.ingestion", "app.retrieval"]

[[tool.importlinter.contracts]]
name = "retrieval library does not depend on agents, core, or mcp"
type = "forbidden"
source_modules = ["app.retrieval"]
forbidden_modules = ["app.agents", "app.core", "app.mcp", "app.ingestion"]

[[tool.importlinter.contracts]]
name = "mcp never touches database or retrieval directly"
type = "forbidden"
source_modules = ["app.mcp"]
forbidden_modules = ["app.database", "app.retrieval", "app.ingestion"]

[[tool.importlinter.contracts]]
name = "core does not depend on mcp or ingestion"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = ["app.mcp", "app.ingestion"]

[[tool.importlinter.contracts]]
name = "agents does not depend on mcp or ingestion internals"
type = "forbidden"
source_modules = ["app.agents"]
forbidden_modules = ["app.mcp", "app.ingestion"]

[[tool.importlinter.contracts]]
name = "ingestion does not depend on agents or mcp"
type = "forbidden"
source_modules = ["app.ingestion"]
forbidden_modules = ["app.agents", "app.mcp"]